--- a/notebooks/behavioral_analysis.ipynb
+++ b/notebooks/behavioral_analysis.ipynb
@@ -16,8 +16,8 @@
       "id": "a3f29aa61c0fa181",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2025-10-29T14:36:13.880280Z",
-          "start_time": "2025-10-29T14:36:13.877911Z"
+          "end_time": "2025-11-02T09:44:51.866009Z",
+          "start_time": "2025-11-02T09:44:51.863173Z"
         }
       },
       "outputs": [],
@@ -25,12 +25,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "557640e2d7c1094c",
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2025-10-29T14:36:13.976850Z",
-          "start_time": "2025-10-29T14:36:13.915518Z"
+          "end_time": "2025-11-02T09:44:51.902146Z",
+          "start_time": "2025-11-02T09:44:51.889147Z"
         }
       },
       "outputs": [
@@ -39,38 +39,76 @@
           "output_type": "stream",
           "text": [
             "Loaded metrics keys: ['timesteps', 'population', 'births', 'deaths', 'mean_energy', 'mean_age', 'max_age', 'total_food', 'mean_distance_per_step', 'std_distance_per_step'] ...\n",
-            "Loaded 101 lineage snapshots.\n"
+            "Loaded lineage stats as list with 6 items\n",
+            "First item preview: {'timestep': 0, 'total_agents': 50, 'active_lineages': 50, 'extinct_lineages': 0, 'dominant_lineages': [{'founder_id': 0, 'descendants': 1, 'percentage': 2.0}, {'founder_id': 1, 'descendants': 1, 'percentage': 2.0}, {'founder_id': 2, 'descendants': 1, 'percentage': 2.0}, {'founder_id': 3, 'descendants': 1, 'percentage': 2.0}, {'founder_id': 4, 'descendants': 1, 'percentage': 2.0}], 'lineage_diversity_index': 0.98, 'mean_generation': 0.0, 'max_generation': 0, 'descendants_per_founder': {'0': 1, '1': 1, '2': 1, '3': 1, '4': 1, '5': 1, '6': 1, '7': 1, '8': 1, '9': 1, '10': 1, '11': 1, '12': 1, '13': 1, '14': 1, '15': 1, '16': 1, '17': 1, '18': 1, '19': 1, '20': 1, '21': 1, '22': 1, '23': 1, '24': 1, '25': 1, '26': 1, '27': 1, '28': 1, '29': 1, '30': 1, '31': 1, '32': 1, '33': 1, '34': 1, '35': 1, '36': 1, '37': 1, '38': 1, '39': 1, '40': 1, '41': 1, '42': 1, '43': 1, '44': 1, '45': 1, '46': 1, '47': 1, '48': 1, '49': 1}}\n"
           ]
         }
       ],
       "source": [
         "import json\n",
+        "import numpy as np\n",
         "from pathlib import Path\n",
         "\n",
+        "# Define paths\n",
         "logs_dir = Path(\"../experiments/logs\")\n",
         "metrics_path = logs_dir / \"metrics.npz\"\n",
         "lineage_stats_path = logs_dir / \"lineage_stats.json\"\n",
         "\n",
+        "# Load NumPy metrics file\n",
         "if metrics_path.exists():\n",
-        "    metrics = json.loads(metrics_path.read_text())\n",
+        "    metrics = np.load(metrics_path)\n",
         "    print(f\"Loaded metrics keys: {list(metrics.keys())[:10]} ...\")\n",
         "else:\n",
-        "    print(\"Run a simulation to generate metrics.npz first.\")\n",
+        "    print(f\"Metrics file not found: {metrics_path}\")\n",
+        "    metrics = None\n",
         "\n",
+        "# Load JSON lineage stats file\n",
         "if lineage_stats_path.exists():\n",
         "    lineage_stats = json.loads(lineage_stats_path.read_text())\n",
-        "    print(f\"Loaded {len(lineage_stats)} lineage snapshots.\")\n",
+        "    \n",
+        "    # Handle both dict and list cases\n",
+        "    if isinstance(lineage_stats, dict):\n",
+        "        print(f\"Loaded lineage stats keys: {list(lineage_stats.keys())[:10]} ...\")\n",
+        "    elif isinstance(lineage_stats, list):\n",
+        "        print(f\"Loaded lineage stats as list with {len(lineage_stats)} items\")\n",
+        "        if len(lineage_stats) > 0:\n",
+        "            print(f\"First item preview: {lineage_stats[0]}\")\n",
+        "    else:\n",
+        "        print(f\"Loaded lineage stats type: {type(lineage_stats)}\")\n",
         "else:\n",
-        "    print(\"Run a simulation with lineage tracking enabled to generate lineage_stats.json.\")"
+        "    print(f\"Lineage stats file not found: {lineage_stats_path}\")\n",
+        "    lineage_stats = None"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "f19a8ea7-2e08-420c-9965-f9a1c95acb76",
+      "id": "ceb894e5-c6e9-4c44-bd52-d30cb7635c38",
       "metadata": {},
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "if metrics is not None:\n",
+        "    population = metrics['population']\n",
+        "    timesteps = metrics['timesteps']\n",
+        "    plt.figure(figsize=(10, 4))\n",
+        "    plt.plot(timesteps, population, color='tab:blue')\n",
+        "    plt.title('Population Over Time')\n",
+        "    plt.xlabel('Timestep')\n",
+        "    plt.ylabel('Population')\n",
+        "    plt.grid(alpha=0.3)\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print('Metrics data not loaded; run a simulation first.')\n"
+      ]
     }
   ],
   "metadata": {
