notebook: add descendant query analysis

--- a/notebooks/behavioral_analysis.ipynb
+++ b/notebooks/behavioral_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3efdf52fdddc310c",
+   "id": "70826e26-cd7c-4bdc-b3da-c8723d9fbc60",
    "metadata": {},
    "source": [
     "# Behavioral Metrics Exploration\n",
@@ -16,8 +16,8 @@
    "id": "a3f29aa61c0fa181",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T09:44:51.866009Z",
-     "start_time": "2025-11-02T09:44:51.863173Z"
+     "end_time": "2025-11-02T10:55:38.776742Z",
+     "start_time": "2025-11-02T10:55:38.774432Z"
     }
    },
    "outputs": [],
@@ -29,8 +29,8 @@
    "id": "557640e2d7c1094c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-02T09:44:51.902146Z",
-     "start_time": "2025-11-02T09:44:51.889147Z"
+     "end_time": "2025-11-02T10:55:38.815310Z",
+     "start_time": "2025-11-02T10:55:38.805390Z"
     }
    },
    "outputs": [
@@ -84,15 +84,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ceb894e5-c6e9-4c44-bd52-d30cb7635c38",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T10:55:38.847578Z",
+     "start_time": "2025-11-02T10:55:38.844544Z"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "14cbb787",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T10:55:39.054984Z",
+     "start_time": "2025-11-02T10:55:38.900512Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -126,15 +136,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7163df7b-dc2c-4977-a30c-e1aaa6b8dd94",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T10:55:39.077520Z",
+     "start_time": "2025-11-02T10:55:39.075315Z"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "3d6e93ea",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T10:55:39.323298Z",
+     "start_time": "2025-11-02T10:55:39.111313Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -193,7 +213,215 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bcb311c-7eeb-4662-a3c5-bfcbf3dfe18a",
+   "id": "c7fe0926-088b-4a8e-8b29-0eb0ac97a987",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T10:55:39.341970Z",
+     "start_time": "2025-11-02T10:55:39.338940Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b7d1cfd3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T10:59:26.797284Z",
+     "start_time": "2025-11-02T10:59:25.373886Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>parent_id</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>is_alive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>52</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>185</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>72</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>118</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>1864</td>\n",
+       "      <td>1756.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>1851.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>1986</td>\n",
+       "      <td>1864.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>2148</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>2292</td>\n",
+       "      <td>2148.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>86 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  parent_id  generation  is_alive\n",
+       "0      7        NaN           0         0\n",
+       "1     52        7.0           1         0\n",
+       "2    185        7.0           1         0\n",
+       "3     72       52.0           2         0\n",
+       "4    118       52.0           2         0\n",
+       "..   ...        ...         ...       ...\n",
+       "81  1864     1756.0          16         0\n",
+       "82  2001     1851.0          16         0\n",
+       "83  1986     1864.0          17         0\n",
+       "84  2148     2001.0          17         0\n",
+       "85  2292     2148.0          18         0\n",
+       "\n",
+       "[86 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total descendants: 86 (alive: 0, dead: 86)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path('..').resolve()\n",
+    "if str(project_root) not in sys.path:\n",
+    "    sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "from src.analysis import open_lineage_database\n",
+    "import pandas as pd\n",
+    "\n",
+    "FOUNDER_ID = 7  # change as needed\n",
+    "\n",
+    "if 'logs_dir' not in globals():\n",
+    "    print('logs_dir not defined; run the earlier cell first.')\n",
+    "else:\n",
+    "    try:\n",
+    "        conn = open_lineage_database(logs_dir)\n",
+    "    except FileNotFoundError:\n",
+    "        conn = None\n",
+    "        print(f\"Lineage database not found in {logs_dir}\")\n",
+    "    if conn is not None:\n",
+    "        query = \"\"\"WITH RECURSIVE descendants(id, parent_id, root_id, generation, death) AS (\n",
+    "        SELECT id, parent_id, root_id, generation, death\n",
+    "        FROM agents\n",
+    "        WHERE root_id = ?\n",
+    "        UNION\n",
+    "        SELECT a.id, a.parent_id, a.root_id, a.generation, a.death\n",
+    "        FROM agents a\n",
+    "        JOIN descendants d ON a.parent_id = d.id\n",
+    "    )\n",
+    "    SELECT id, parent_id, generation, (death IS NULL) AS is_alive\n",
+    "    FROM descendants\n",
+    "    ORDER BY generation, id;\"\"\"\n",
+    "        cursor = conn.execute(query, (FOUNDER_ID,))\n",
+    "        rows = cursor.fetchall()\n",
+    "        conn.close()\n",
+    "        if rows:\n",
+    "            df_desc = pd.DataFrame(rows, columns=['id', 'parent_id', 'generation', 'is_alive'])\n",
+    "            display(df_desc)\n",
+    "            alive_count = int(df_desc['is_alive'].sum())\n",
+    "            print(f\"Total descendants: {len(df_desc)} (alive: {alive_count}, dead: {len(df_desc) - alive_count})\")\n",
+    "        else:\n",
+    "            print(f\"No descendants found for founder {FOUNDER_ID}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3b9bb598c549bd",
    "metadata": {},
    "outputs": [],
    "source": []
